Testes temporários de logos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="images/logo.png" alt="Logo principal da página">
+                    <img class="logo" src="images/logo-0.png" alt="Logo principal da página">
                 </a>
             </div> <!-- Logo -->
             <nav class="menu-desktop">
