--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img class="logo" src="images/logo-0.png" alt="Logo principal da página">
+                    <img src="images/logo-0.png" alt="Logo principal da página">
                 </a>
             </div> <!-- Logo -->
             <nav class="menu-desktop">
@@ -38,5 +38,25 @@
         </div> <!-- Interface -->
     </header>
     
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>Alexandre A<span>.</span> Bratifisch</h1>
+                        <p>Olá seja bem vindo ao meu portfólio, sou <span>Alexandre Albertino Bratifisch</span>, programador com formação pela FATEC de Presidente Prudente/SP em <span>Análise e Desenvolvimento de Sistemas</span>. Desde cedo, tenho um grande interesse por tecnologia, e cada novo aprendizado reforça minha decisão de seguir carreira na área de TI.</p>
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em Contato</button>
+                            </a>
+                        </div>
+                    </div> <!-- txt-topo-site -->
+                    <div class="img-topo-site">
+                        <img src="images/code-screen-0.png" alt="Imagem de uma tela com códigos de programação.">
+                    </div> <!-- img-topo-site -->
+                </div> <!-- flex -->
+            </div> <!-- interface -->
+        </section> <!-- topo-do-site -->
+    </main>
 </body>
 </html>
