--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio Alexandre Bratifisch</title>
+    <title>Portfólio Alexandre Bratifisch</title>
 
     <link rel="stylesheet" href="style.css"> <!-- Estilização da página -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> <!-- Bootstrap icons -->
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
     <!-- Fim Google Fonts -->
+
 
 </head>
 <body>
@@ -43,7 +45,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
-                        <h1>Alexandre A<span>.</span> Bratifisch</h1>
+                        <h1> <span>Alexandre</span> <span>A.</span> <span>Bratifisch</span></h1>
                         <p>Olá seja bem vindo ao meu portfólio, sou <span>Alexandre Albertino Bratifisch</span>, programador com formação pela FATEC de Presidente Prudente/SP em <span>Análise e Desenvolvimento de Sistemas</span>. Desde cedo, tenho um grande interesse por tecnologia, e cada novo aprendizado reforça minha decisão de seguir carreira na área de TI.</p>
                         <div class="btn-contato">
                             <a href="#">
@@ -57,6 +59,27 @@
                 </div> <!-- flex -->
             </div> <!-- interface -->
         </section> <!-- topo-do-site -->
+
+        <section class="especialidades">
+            <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
+            <div class="flex">
+                <div class="especialidades-box">
+                    <i class="bi bi-code-slash"></i>
+                    <h3>Desenvolvedor FullStack</h3>
+                    <p>Experiência e habilidades em diversas ferramentas de programação, desenvolvimento de interfaces e gerenciamento de bancos de dados, cobrindo todo o ciclo de desenvolvimento de software. Com foco especial na programação back-end, priorizo a criação de sistemas robustos, escaláveis e eficientes.</p>
+                </div> <!-- especialidades-box -->
+                <div class="especialidades-box">
+                    <i class="bi bi-gear"></i>
+                    <h3>Automação de processos</h3>
+                    <p>Especializado em automação de tarefas utilizando bibliotecas em Python, com o objetivo de otimizar processos e eliminar atividades repetitivas e monótonas. Essa habilidade permite liberar tempo e recursos para focar em problemas mais complexos e estratégicos, contribuindo para maior eficiência operacional.</p>
+                </div> <!-- especialidades-box -->
+                <div class="especialidades-box">
+                    <i class="bi bi-images"></i>
+                    <h3>Processamento de Imagem</h3>
+                    <p>Com base em JavaScript, desenvolvo soluções para processamento de imagem que atendem a diferentes necessidades, como extração de informações, manipulação de imagens, tratamento de cores, identificação de elementos, recortes dinâmicos e leitura de QR Codes. Todo o trabalho é direcionado a resolver problemas específicos com criatividade e precisão.</p>
+                </div> <!-- especialidades-box -->
+            </div> <!-- flex -->
+        </section> <!-- especialidades -->
     </main>
 </body>
 </html>
