Adição e estilização do campo sobre

--- a/index.html
+++ b/index.html
@@ -77,9 +77,41 @@
                     <i class="bi bi-images"></i>
                     <h3>Processamento de Imagem</h3>
                     <p>Com base em JavaScript, desenvolvo soluções para processamento de imagem que atendem a diferentes necessidades, como extração de informações, manipulação de imagens, tratamento de cores, identificação de elementos, recortes dinâmicos e leitura de QR Codes. Todo o trabalho é direcionado a resolver problemas específicos com criatividade e precisão.</p>
+                    <div class="novidade">
+                        <i class="bi bi-award-fill"></i>
+                        <p>NOVA ESPECIALIDADE</p>
+                    </div>
                 </div> <!-- especialidades-box -->
             </div> <!-- flex -->
         </section> <!-- especialidades -->
+
+        <section class="sobre">
+            <div class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="images/alexandre.jpg" alt="Imagem do Alexandre">
+                    </div> <!-- img-sobre -->
+                    <div class="txt-sobre">
+                        <h2>Um pouco mais sobre o <span>Alexandre.</span></h2>
+                        <p>Minha experiência e conhecimento abrangem tanto o desenvolvimento back-end quanto front-end, e minha paixão por resolver problemas e aprender constantemente me impulsiona a buscar soluções inovadoras e eficientes. A tecnologia é um campo em constante evolução, e estou entusiasmado para acompanhar e contribuir com essas mudanças, sempre em busca de crescimento e novas oportunidades.</p>
+                        <p>Meu objetivo é consolidar uma carreira como programador, onde posso aplicar e expandir minhas habilidades técnicas, mas tenho curiosidade e abertura para explorar diversas áreas do universo tecnológico.</p>
+                        <p>Minha experiência de trabalhos com tecnologia atualmente estão apenas no campo acadêmico e em projetos pessoais, busco novas oportunidades para conseguir iniciar a minha carreira.</p>
+                        <div class="btn-social">
+                            <a href="https://github.com/AlexusBrat" target="_blank">
+                                <button><i class="bi bi-github"></i></button>
+                            </a>
+                            <a href="https://www.linkedin.com/in/alexandre-bratifisch/" target="_blank">
+                                <button><i class="bi bi-linkedin"></i></button>
+                            </a>
+                            <a href="https://www.instagram.com/alexusbrat/" target="_blank">
+                                <button><i class="bi bi-instagram"></i></button>
+                            </a>
+                        </div> <!-- btn-social -->
+                    </div> <!-- txt-sobre -->
+                    
+                </div> <!-- flex -->
+            </div> <!-- interface -->
+        </section> <!-- sobre -->
     </main>
 </body>
 </html>
