Adição do portfolio de projetos com placeholder

--- a/index.html
+++ b/index.html
@@ -112,6 +112,23 @@
                 </div> <!-- flex -->
             </div> <!-- interface -->
         </section> <!-- sobre -->
+
+        <section class="portfolio">
+            <div class="interface">
+                <h2 class="titulo">MEUS PROJETOS.</h2>
+                <div class="flex">
+                    <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
+                        <div class="overlay">FullStack</div> <!-- overlay -->
+                    </div> <!-- img-port -->
+                    <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
+                        <div class="overlay">Automação</div> <!-- overlay -->
+                    </div> <!-- img-port -->
+                    <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
+                        <div class="overlay">Processamento de Imagem</div> <!-- overlay -->
+                    </div> <!-- img-port -->
+                </div> <!-- flex -->
+            </div> <!-- interface -->
+        </section> <!-- portfolio -->
     </main>
 </body>
 </html>
