Adição e estilização do formulário

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <section class="portfolio">
             <div class="interface">
-                <h2 class="titulo">MEUS PROJETOS.</h2>
+                <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
                 <div class="flex">
                     <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
                         <div class="overlay">FullStack</div> <!-- overlay -->
@@ -129,6 +129,21 @@
                 </div> <!-- flex -->
             </div> <!-- interface -->
         </section> <!-- portfolio -->
+
+        <section class="formulario">
+            <div class="interface">
+                <h2 class="titulo"><span>FALA COMIGO.</span></h2>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Nome:" required>
+                    <input type="text" name="" id="" placeholder="E-mail:" required>
+                    <input type="text" name="" id="" placeholder="Celular:" required>
+                    <textarea name="" id="" placeholder="Sua mensagem:" required></textarea>
+                    <div class="btn-enviar">
+                        <input type="submit" value="ENVIAR">
+                    </div> <!-- btn-enviar -->
+                </form>
+            </div>
+        </section> <!-- formulario -->
     </main>
 </body>
 </html>
