Adição do link do projeto FullStack

--- a/index.html
+++ b/index.html
@@ -127,15 +127,24 @@
             <div class="interface">
                 <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
                 <div class="flex">
-                    <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
-                        <div class="overlay">FullStack</div> <!-- overlay -->
-                    </div> <!-- img-port -->
-                    <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
-                        <div class="overlay">Automação</div> <!-- overlay -->
-                    </div> <!-- img-port -->
-                    <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
-                        <div class="overlay">Processamento de Imagem</div> <!-- overlay -->
-                    </div> <!-- img-port -->
+                    <a href="https://projeto-spotify-fullstack.onrender.com/" target="_blank">
+                        <div class="img-port" style="background-image: url(images/ProjetoFullStack.png);" >
+                            <div class="overlay">FullStack</div> <!-- overlay -->
+                        </div> <!-- img-port -->
+                    </a> 
+                    <a href="" target="_blank">
+                        <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
+                            <div class="overlay">Automação</div> <!-- overlay -->
+                        </div> <!-- img-port -->
+                    </a>
+                    
+                    <a href="" target="_blank">
+                        <div class="img-port" style="background-image: url(images/code-screen-1.jpg);" >
+                            <div class="overlay">Processamento de Imagem</div> <!-- overlay -->
+                        </div> <!-- img-port -->
+                    </a>
+                    
+
                 </div> <!-- flex -->
             </div> <!-- interface -->
         </section> <!-- portfolio -->
